# qinling

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: aliases.inc  api-versions.inc  conf.py  executions.inc  functions.inc  index.rst  jobs.inc  parameters.yaml  runtimes.inc  urls.inc  versions.inc  webhooks.inc
devstack/: plugin.sh  settings
doc/: README.rst  requirements.txt
doc/source/: conf.py  features.rst  glossary.rst  index.rst  installation.rst  quick_start.rst  usage.rst  videos.rst
etc/: policy.json.sample
etc/apache2/: qinling-api.conf
etc/uwsgi/: qinling-api.yaml
example/kubernetes/: cfssl-ca-config.json  cfssl-client-csr.json  k8s_qinling_role.yaml
playbooks/: post.yaml  pre.yaml
qinling/: config.py  context.py  exceptions.py  rpc.py  status.py  version.py
qinling/api/: access_control.py  app.py  service.py  wsgi.py
qinling/cmd/: api.py  engine.py  launch.py  status.py
qinling/db/: api.py  base.py
qinling/engine/: base.py  default_engine.py  rpc.py  service.py  utils.py
qinling/orchestrator/: base.py
qinling/services/: periodics.py
qinling/storage/: base.py  file_system.py
qinling/tests/: test_qinling.py
qinling/utils/: common.py  constants.py  etcd_util.py  executions.py  jobs.py  rest_utils.py  thread_local.py
qinling_tempest_plugin/: README.rst  config.py  plugin.py  post_test_hook.sh  pre_test_hook.sh
qinling_tempest_plugin/functions/: python_test.py  test_python_file_limit.py  test_python_positional_args.py  test_python_process_limit.py
qinling_tempest_plugin/services/: base.py  qinling_client.py
qinling_tempest_plugin/tests/: base.py  utils.py
releasenotes/notes/: add-apache-uwsgi-examples-13f735ec82c37a64.yaml  add-api-ref-documentation-5ec1325223ecafab.yaml  add-cors-support-ce060ee8513a1acf.yaml  add-docker-tools-cd9aa6fff8936d81.yaml  add-nodejs10-runtime-b473129963436a68.yaml  add-support-function-alias-for-execution-and-webhook-cf786fc4c9efd0af.yaml  drop-py-2-7-86062f8380134200.yaml  enable-mutable-configuration-a0527660fa58532c.yaml  function-alias-in-job-d3f969306b7a4749.yaml  function-aliasing-318abd48128b4084.yaml  function-timeout-905dc4b064b73fd3.yaml  function-versioning-6e23fc021c2a7c7e.yaml  get-runtime-pool-information-440351400ad7f0b8.yaml  isolate-k8s-pods-617fec5dc5fbd2d8.yaml  python3-runtime-fca413608da48437.yaml  qinling-k8s-apiserver-certs-1651e26de5ca001c.yaml  qinling-kolla-integration-305813d80110f209.yaml  (+3 more)
tools/: clear_resources.sh  config-generator.qinling.conf  cover.sh
(+243 files in other folders)
