[metadata]
name = qinling
summary = Function as a Service
description-file =
    README.rst
author = OpenStack Qinling Team
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    qinling

[entry_points]
console_scripts =
    qinling-server = qinling.cmd.launch:main
    qinling-db-manage = qinling.db.sqlalchemy.migration.cli:main

qinling.orchestrator =
    kubernetes = qinling.orchestrator.kubernetes.manager:KubernetesManager

oslo.config.opts =
    qinling.config = qinling.config:list_opts

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
