[metadata]
name = qinling
summary = Function as a Service
description-file =
    README.rst
author = OpenStack Qinling Team
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/qinling/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    qinling
    qinling_tempest_plugin

[entry_points]
console_scripts =
    qinling-api = qinling.cmd.api:main
    qinling-engine = qinling.cmd.engine:main
    qinling-db-manage = qinling.db.sqlalchemy.migration.cli:main
    qinling-status = qinling.cmd.status:main

qinling.storage.provider:
  local = qinling.storage.file_system:FileSystemStorage

qinling.orchestrator =
    kubernetes = qinling.orchestrator.kubernetes.manager:KubernetesManager

oslo.config.opts =
    qinling.config = qinling.config:list_opts

tempest.test_plugins =
    qinling_test = qinling_tempest_plugin.plugin:QinlingTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html
